<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">ConfigPanel</string>
    <string name="advanced_settings">Advanced</string>
    <string name="category_vibrator">Vibrator</string>
    <string name="category_display">Display</string>
    <string name="vib_strength_title_head">Strength</string>
    <string name="vib_strength_summary_head">Define the strength of the vibrator</string>
    <string name="taptowake_summary">Double tap on lockscreen to wake device</string>
    <string name="taptowake_title">Tap to wake</string>
    <string name="device_doze_title">Ambient display</string>
</resources>
